// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuthorityReady /> should match snapshot 1`] = `
<div>
  <h3>
    Certificate authority
  </h3>
  <p>
    Your certificate authority (CA) is set up properly. Please note that if you delete it all clients will have their access revoked.
  </p>
  <button
    class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
    type="button"
  >
     
     
    Delete CA
  </button>
</div>
`;

exports[`<AuthorityReady /> should prevent deletion when server is enabled 1`] = `
<div>
  <h3>
    Certificate authority
  </h3>
  <p>
    You can't delete the CA while the OpenVPN server is enabled. To delete the CA you need to disable the server configuration first.
  </p>
</div>
`;
